[package]
name = "massa-api-loadtest"
version = "0.1.0"
edition = "2021"

default-run = "tonic"

[[bin]]
name = "tonic"
path = "src/tonic.rs"

[[bin]]
name = "jsonrpsee"
path = "src/jsonrpsee.rs"

[dependencies]
anyhow = "1.0.71"
jsonrpsee = { version = "0.18.2", features = ["server", "macros"] }
futures = "0.3.18"
async-trait = "0.1.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
tower-http = { version = "0.4.0", features = ["cors"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.25"
tokio = { version = "1.23", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

prost = { version = "=0.11.9", features = [
    "prost-derive",
] }
prost-types = "=0.11.9"
tonic = "=0.9.2"

[build-dependencies]
glob = "0.3.1"
prost-build = "=0.11.9"
tonic-build = "=0.9.2"
